desk stats, edit users, skills assignments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <mat-drawer-container class="example-container h-100">
 
-    <mat-drawer #sidenav id="sidenav" mode="over">
+    <mat-drawer #sidenav id="sidenav" mode="over" class="bg-dark">
         <app-sidenav></app-sidenav>
     </mat-drawer>
 
