--- a/src/app/pages/asistente/desktop/desktop.component.html
+++ b/src/app/pages/asistente/desktop/desktop.component.html
@@ -1,97 +1,107 @@
-<div class="row p-3">
-    <div class="col">
-  
-      <div class="card text-white bg-danger mb-4">
-        <div class="card-header banner-title">
-          <span>
-            ESCRITORIO {{ idDesk }}
-          </span>
-          <span *ngIf="comingClient">
-            <mat-icon style="float: right; color: yellow; font-size: x-large;">directions_walk</mat-icon>
-          </span> 
-        </div>
-        <div class="banner-content" style="background-color: rgb(141, 51, 51)">
-  
-          <div class="container">
-  
-            <!------------------------------>
-            <!-- EN ATENCIÓN -->
-            <!------------------------------>
-  
-            <div *ngIf="ticket">
-              <div class="row">
-                <div class="col">
-                  Atendiendo turno
-                </div>
-              </div>
-              <div class="row">
-                <div class="col xxxxl">
-                  {{ ticket.id_ticket }}
-                </div>
-              </div>
-            </div>
-  
-            <!------------------------------>
-            <!-- EN ESPERA -->
-            <!------------------------------>
-            <div *ngIf="!ticket" class="my-4">
-              <span *ngIf="!loading">
-                Disponible para atender
-              </span>
-            </div>
-  
-            <div class="card bg-danger text-white my-4 py-2" *ngIf='message'>{{message}}</div>
-  
-              <!------------------------------>
-              <!-- TIEMPOS DE ATENCION -->
-              <!------------------------------>
-              <div class="row banner-footer">
-                <div class="col p-0"><div>TE</div><div>{{tmWaiting}}</div></div>
-                <div class="col p-0"><div>TA</div><div>{{tmAttention}}</div></div>
-                <div class="col p-0"><div>Tm</div><div>{{timerCount}}</div></div>
-                <div class="col p-0"><div>TC</div><div>{{pendingTickets}}</div></div>
-              </div>
-  
-          </div>
-  
-        </div>
+<div class="m-4 row animated fadeIn">
+  <!-- DESKTOP SCREEN -->
+  <div class="col-lg-6">
+    <div class="card text-white bg-danger mb-4">
+      <div class="card-header banner-title">
+        <span>
+          ESCRITORIO {{ idDesk }}
+        </span>
+        <span *ngIf="comingClient">
+          <mat-icon style="float: right; color: yellow; font-size: x-large;">directions_walk</mat-icon>
+        </span>
       </div>
-  
-  
-      <div class="card text-white bg-danger mb-4">
-        <div class="card-header banner-title"> Panel </div>
-        <div class="banner-content" style="background-color: rgb(141, 51, 51)">
-  
-  
-  
-          <div class="container">
-            <div class="row py-2">
-              <div class="my-2 col-md-3 col-sm-6 col-xs-12">
-                <button class="btn btn-info btn-block btn-lg" (click)="atenderInformes()" [disabled]="waitForClient">
-                  Informes
-                </button>
+      <div class="banner-content" style="background-color: rgb(141, 51, 51)">
+
+        <div class="container">
+
+          <!------------------------------>
+          <!-- EN ATENCIÓN -->
+          <!------------------------------>
+
+          <div *ngIf="ticket">
+            <div class="row">
+              <div class="col">
+                Atendiendo turno
               </div>
-              <div class="my-2 col-md-3 col-sm-6 col-xs-12">
-                <button class="btn btn-success btn-block btn-lg" (click)="atenderTicket()" [disabled]="waitForClient">
-                  Siguiente
-                </button>
-              </div>
-              <div class="my-2 col-md-3 col-sm-6 col-xs-12">
-                <button class="btn btn-primary btn-block btn-lg" (click)="devolverTicket()" [disabled]="waitForClient">
-                  Devolver
-                </button>
-              </div>
-              <div class="my-2 col-md-3 col-sm-6 col-xs-12">
-                <button class="btn btn-danger btn-block btn-lg" (click)="finalizarTicket()" [disabled]="waitForClient">
-                  Finalizar
-                </button>
+            </div>
+            <div class="row">
+              <div class="col xxxxl">
+                {{ ticket.id_ticket }}
               </div>
             </div>
           </div>
-  
-  
+
+          <!------------------------------>
+          <!-- EN ESPERA -->
+          <!------------------------------>
+          <div *ngIf="!ticket" class="my-4">
+            <span *ngIf="!loading">
+              Disponible para atender
+            </span>
+          </div>
+
+          <div class="card bg-danger text-white my-4 py-2" *ngIf='message'>{{message}}</div>
+
+          <!------------------------------>
+          <!-- TIEMPOS DE ATENCION -->
+          <!------------------------------>
+          <div class="row banner-footer">
+            <div class="col p-0">
+              <div>TE</div>
+              <div>{{tmWaiting}}</div>
+            </div>
+            <div class="col p-0">
+              <div>TA</div>
+              <div>{{tmAttention}}</div>
+            </div>
+            <div class="col p-0">
+              <div>Tm</div>
+              <div>{{timerCount}}</div>
+            </div>
+            <div class="col p-0">
+              <div>TC</div>
+              <div>{{pendingTickets}}</div>
+            </div>
+          </div>
+
         </div>
+
       </div>
-  
     </div>
   </div>
+  <!-- ACTION BUTTONS -->
+  <div class="col-lg-6">
+    <div class="card text-white bg-danger mb-4">
+      <div class="card-header banner-title"> Panel </div>
+      <div class="banner-content" style="background-color: rgb(141, 51, 51)">
+
+        <div class="container">
+          <div class="row py-2">
+            <div class="my-2 col-md-6 col-sm-12">
+              <button class="btn btn-info btn-block btn-lg" (click)="atenderInformes()" [disabled]="waitForClient">
+                Informes
+              </button>
+            </div>
+            <div class="my-2 col-md-6 col-sm-12">
+              <button class="btn btn-success btn-block btn-lg" (click)="atenderTicket()" [disabled]="waitForClient">
+                Siguiente
+              </button>
+            </div>
+            <div class="my-2 col-md-6 col-sm-12">
+              <button class="btn btn-primary btn-block btn-lg" (click)="devolverTicket()" [disabled]="waitForClient">
+                Devolver
+              </button>
+            </div>
+            <div class="my-2 col-md-6 col-sm-12">
+              <button class="btn btn-danger btn-block btn-lg" (click)="finalizarTicket()" [disabled]="waitForClient">
+                Finalizar
+              </button>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+</div>
