--- a/src/app/pages/asistente/home/home.component.html
+++ b/src/app/pages/asistente/home/home.component.html
@@ -3,25 +3,22 @@
     <p class="lead">Bienvenido, desde aquí puede sacar un turno y evitar la sala de esperas.</p>
 
     <div class="my-4">
-        <input #txtEscritorio (keyup.enter)="entrar( txtEscritorio.value )" name="escritorio" type="number"
-            class="form-control" placeholder="Escritorio" required>
+        <!-- <input #txtEscritorio (keyup.enter)="entrar( txtEscritorio.value )" name="escritorio" type="number"
+            class="form-control" placeholder="Escritorio" required> -->
+
+            <mat-form-field appearance="fill">
+                <mat-label>Seleccione</mat-label>
+                <select #selectDesktop matNativeControl required>
+                  <option *ngFor="let desktop of desktops" [value]="desktop.id_desktop">{{desktop.id_desktop}}</option>
+                </select>
+              </mat-form-field>
+ 
+
     </div>
 
     <div>
-        <!-- <mat-form-field appearance="fill">
-            <mat-label>Escritorios</mat-label>
-            <select matNativeControl required>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="mercedes">Mercedes</option>
-              <option value="audi">Audi</option>
-            </select>
-          </mat-form-field> -->
-    </div>
-
-    <div>
-        <button class="btn btn-success btn-block" role="button"
-            (click)="entrar( txtEscritorio.value )">Ingresar</button>
+        <button class="btn btn-success" role="button"
+            (click)="entrar( selectDesktop.value )">Ingresar</button>
     </div>
 
     <hr class="my-4">
