--- a/src/app/pages/publico/pantalla/pantalla.component.html
+++ b/src/app/pages/publico/pantalla/pantalla.component.html
@@ -18,18 +18,21 @@
         <!-- SU TURNO -->
         <!-- ======================================================== -->
 
-        <div class="card text-white bg-danger mb-4" *ngIf="ticketsService.myTicket">
-            <div class="card-header banner-title">TURNO {{ticketsService.myTicket.id_ticket}} </div>
+        <div class="card text-white bg-danger mb-4">
+            <div class="card-header banner-title">TURNO {{ticketsService.myTicket?.id_ticket}} </div>
             <div class="banner-content" style="background-color: rgb(141, 51, 51)">
 
                 <!------------------------------>
                 <!-- EN ESPERA -->
                 <!------------------------------>
 
-                <div class="xxxxl" *ngIf="!ticketsService.myTicket?.id_desk">
-                    <span> 
-                        {{ ticketsService.myTicket.id_type }}
-                        {{ ticketsService.myTicket.id_ticket }}
+                <div>
+                    <span *ngIf="!ticketsService.myTicket?.id_ticket">
+                        espere...
+                    </span>
+                    <span class="xxxxl"> 
+                        {{ ticketsService.myTicket?.id_skill }}
+                        {{ ticketsService.myTicket?.id_ticket }}
                     </span>
                 </div>
 
@@ -45,7 +48,7 @@
                     </div>
                     <div class="row">
                         <div class="col xxxxl">
-                            {{ ticketsService.myTicket.id_desk }}
+                            {{ ticketsService.myTicket?.id_desk }}
                         </div>
                     </div>
                     <div class="row" *ngIf="!coming">
@@ -58,14 +61,18 @@
             </div>
         </div>
 
-        <div class="card mb-4">
-            <button class="btn btn-danger" (click)="cancelTicket()" *ngIf="ticketsService.myTicket">Cancelar Turno</button>
+        <!-- ======================================================== -->
+        <!-- CANCELAR TURNO -->
+        <!-- ======================================================== -->
+        
+        <div class="mb-4">
+            <button class="btn btn-danger btn-lg text-uppercase" (click)="cancelTicket()" *ngIf="ticketsService.myTicket">Cancelar Turno</button>
         </div>
 
         <!-- ======================================================== -->
-        <!-- PUBLICIDAD VIDEO -->
+        <!-- PUBLICIDAD -->
         <!-- ======================================================== -->
-
+        
         <div>
             <!-- <iframe width="100%" height="480px" [src]="'-FV0KKDdysw?rel=0&autoplay=1&mute=0&fullscreen=1&loop=1&playlist=-FV0KKDdysw' | domseguro: 'https://www.youtube.com/embed/'" frameborder="0" allowtransparency="true" allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
@@ -73,50 +80,6 @@
     </div>
 
     <div class="col-md-6">
-
-        <!-- ======================================================== -->
-        <!-- ULTIMO LLAMADO -->
-        <!-- ======================================================== -->
-
-        <div class="card text-white bg-success mb-4">
-
-            <div class="card-header banner-title">ULTIMO LLAMADO</div>
-
-            <div class="card-text d-flex banner-subtitle">
-                <!-- <div class="card-header p-1">{{n}}</div> -->
-
-                <div class="d-flex justify-content-center text-white" style="width: 50%">
-                    Turno
-                </div>
-
-                <div class="d-flex justify-content-center ticket-secundario-escritorio  text-white" style="width: 50%">
-                    Escritorio
-                </div>
-
-            </div>
-
-            <div class="rounded d-flex banner-content" style="background-color:  rgb(51, 141, 51)"
-                *ngIf="ticketsService.ticketsTail.length===0">
-                <div class="d-flex justify-content-center text-white banner-title" style="width: 100%">
-                    <span>espere...</span>
-                </div>
-            </div>
-
-            <div class="rounded d-flex banner-content" style="background-color: rgb(51, 141, 51)"
-                *ngIf="ticketsService.ticketsTail.length>0">
-                <!-- <div class="card-header p-1">{{n}}</div> -->
-
-                <div class="d-flex justify-content-center text-white xxxl" style="width: 50%">
-                    <span *ngIf="ticketsService.ticketsTail">{{ ticketsService.ticketsTail[0]?.id_type }}{{ ticketsService.ticketsTail[0]?.id_ticket }}</span>
-                </div>
-
-                <div class="d-flex justify-content-center text-white xxxl" style="width: 50%">
-                    <span *ngIf="ticketsService.ticketsTail">{{ ticketsService.ticketsTail[0]?.id_desk }}</span>
-                </div>
-
-            </div>
-
-        </div>
 
         <!-- ======================================================== -->
         <!-- HISTORIAL DE LLAMADAS -->
@@ -152,7 +115,7 @@
                 <!-- <div class="card-header p-1">{{n}}</div> -->
                 <div class="d-flex" *ngFor="let ticket of ticketsService.ticketsTail;">
                     <div class="d-flex justify-content-center text-white" style="width: 50%">
-                        <span *ngIf="ticketsService.ticketsTail">{{ ticket.id_type }}{{ ticket.id_ticket }}</span>
+                        <span *ngIf="ticketsService.ticketsTail">{{ ticket.id_skill }}{{ ticket.id_ticket }}</span>
                     </div>
 
                     <div class="d-flex justify-content-center text-white" style="width: 50%">
