--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -9,6 +9,11 @@
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Nombre público</mat-label>
+        <input matInput placeholder="Nombre de la empresa" formControlName="companyString" name="companyString" type="text" required>
+    </mat-form-field>
+
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Calle</mat-label>
         <input matInput placeholder="Calle" formControlName="addressStreet" name="addressStreet" type="text" required>
     </mat-form-field>
