--- a/src/app/pages/user/tickets/tickets.component.html
+++ b/src/app/pages/user/tickets/tickets.component.html
@@ -1,1 +1,7 @@
-<p>tickets works!</p>
+<div class="container animated fadeIn">
+    <div class="row">
+        <div class="col">
+            Tickets
+        </div>
+    </div>
+</div>
