--- a/src/app/pages/nopagefound/nopagefound.component.html
+++ b/src/app/pages/nopagefound/nopagefound.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center h-100 p-5">
+<div class="container animated fadeIn text-center h-100 p-5">
 
         <div class="m-3" style="font-size: 3rem;">UPS!</div>
         <div class="m-3" style="font-size: 1rem;">No existe la página</div>
