--- a/src/app/pages/user/dashboard/dashboard.component.html
+++ b/src/app/pages/user/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<div class="container animated fadeIn">
+    <div class="row">
+        <div class="col">
+            Dashboard
+        </div>
+    </div>
+</div>
