--- a/src/app/pages/user/profile/profile.component.html
+++ b/src/app/pages/user/profile/profile.component.html
@@ -1,1 +1,7 @@
-<p>profile works!</p>
+<div class="container animated fadeIn">
+    <div class="row">
+        <div class="col">
+            Profile
+        </div>
+    </div>
+</div>
