--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,5 +1,11 @@
 <div class="p-2">
 
+    <!-- HELP -->
+    <div class="sidenav-button m-0 p-1 px-3 mr-4" style="text-align: left;" routerLink="/help">
+        <mat-icon class="sidenav-button-icons">help</mat-icon>
+        <span class="sidenav-button-text">Ayuda</span>
+    </div>
+
     <!-- HOME -->
     <div class="sidenav-button m-0 p-1 px-3 mr-4" style="text-align: left;" routerLink="/home">
         <mat-icon class="sidenav-button-icons">home</mat-icon>
