--- a/src/app/pages/user/desktops/desktops.component.html
+++ b/src/app/pages/user/desktops/desktops.component.html
@@ -4,7 +4,7 @@
         <div class="card-header">Ventanillas</div>
         <div class="card-body card-turnos-info">
             <div class="my-2" *ngFor="let desktop of desktops">
-                <span>{{desktop?.id_desktop}}</span>
+                <span>{{desktop?.cd_desktop}}</span>
                 <span style="float: right;">
                     <mat-icon class="ml-2 list-crud-edit" (click)="editDesktop(desktop._id)">edit</mat-icon>
                     <mat-icon class="ml-2 list-crud-delete" (click)="deleteDesktop(desktop._id)">delete</mat-icon>
