--- a/src/app/pages/user/skills/skill-create-form/skill-create-form.component.html
+++ b/src/app/pages/user/skills/skill-create-form/skill-create-form.component.html
@@ -1,13 +1,13 @@
 <form autocomplete="off" style="color: brown;" ngNativeValidate #formDirective="ngForm" [formGroup]="forma" (ngSubmit)="createSkill(formDirective)">
 
     <mat-form-field color="warn" appearance="fill" class="w-100">
-        <mat-label>Identificador</mat-label>
-        <input matInput placeholder="Id Skill" formControlName="idSkill" name="idSkill" type="text" required>
+        <mat-label>Abreviado</mat-label>
+        <input matInput placeholder="V" formControlName="cdSkill" name="cdSkill" type="text" required>
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" class="w-100">
         <mat-label>Descripcion</mat-label>
-        <input matInput placeholder="Skill" formControlName="txSkill" name="txSkill" type="text" required>
+        <input matInput placeholder="Ventas" formControlName="txSkill" name="txSkill" type="text" required>
     </mat-form-field>
 
     <div class="form-group text-center">
