--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,12 @@ div:focus { outline: none; }
 
 }
 
+.list-crud-star{
+    vertical-align: middle;
+    color:yellow;
+    cursor: pointer;
+}
+
 .card-turnos-danger {
     background-color: brown;
 }
