--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -14,30 +14,32 @@
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Ciudad</mat-label>
+        <input matInput placeholder="Ciudad" formControlName="city" name="city" type="text" required>
+    </mat-form-field>
+    
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Calle</mat-label>
         <input matInput placeholder="Calle" formControlName="addressStreet" name="addressStreet" type="text" required>
     </mat-form-field>
     
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Altura</mat-label>
-        <input matInput placeholder="Altura" formControlName="addressNumber" name="addressNumber" type="text" required>
+        <input matInput placeholder="1234" formControlName="addressNumber" name="addressNumber" type="text" required>
     </mat-form-field>
     
-    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-        <mat-label>Ciudad</mat-label>
-        <input matInput placeholder="Ciudad" formControlName="city" name="city" type="text" required>
-    </mat-form-field>
+
     
     <!-- User -->
 
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-        <mat-label>Nombre de Usuario</mat-label>
-        <input matInput placeholder="Nombre de Ususario" formControlName="name" name="name" type="text" required>
+        <mat-label>Tu Nombre</mat-label>
+        <input matInput placeholder="Diego Perez" formControlName="name" name="name" type="text" required>
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" formControlName="email" name="email" type="email" required>
+        <input matInput placeholder="diego@perez.com" formControlName="email" name="email" type="email" required>
     </mat-form-field>
     
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
@@ -64,7 +66,7 @@
 
     <div class="form-group text-center">
 
-        <button class="btn btn-info btn-block text-uppercase waves-effect waves-light"
+        <button [disabled]="!forma.valid" class="btn btn-info btn-block text-uppercase waves-effect waves-light"
             type="submit">Registrarme</button>
 
     </div>
