--- a/src/app/pages/user/skills/skills.component.html
+++ b/src/app/pages/user/skills/skills.component.html
@@ -4,7 +4,7 @@
         <div class="card-header">Skills</div>
         <div class="card-body card-turnos-danger">
             <div class="my-2" *ngFor="let skill of skills">
-                <span> {{skill?.id_skill}} </span>
+                <span> {{skill?.cd_skill}} </span>
                 <span style="font-size: small;"> [ {{skill?.tx_skill}} ] </span>
                 <span style="float: right;">
                     <mat-icon class="ml-2 list-crud-edit" (click)="editSkill(skill._id)">edit</mat-icon>
