--- a/src/app/pages/asistente/desktop/desktop.component.html
+++ b/src/app/pages/asistente/desktop/desktop.component.html
@@ -4,7 +4,7 @@
     <div class="card text-white bg-danger mb-4">
       <div class="card-header banner-title">
         <span>
-          ESCRITORIO {{ idDesk }}
+          ESCRITORIO {{ cdDesk }}
         </span>
         <span *ngIf="comingClient">
           <mat-icon style="float: right; color: yellow; font-size: x-large;">directions_walk</mat-icon>
