--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,17 @@
-<div class="jumbotron m-2">
-  <h1 class="display-4">Bienvenido a la Web de Turnos</h1>
-  <p class="lead">Bienvenido, desde aquí puede sacar un turno y evitar la sala de esperas.</p>
-  <hr class="my-4">
-  <p> Tenga en cuenta que si usted no se encuentra lo suficientemente cerca de la recepción al momento 
-      de que usted sea llamado, tendrá disponible un botón con el cual usted podrá solicitar minutos 
-      extra para asistir a la ventanilla.
-  </p>
-  
-  <a class="btn btn-primary btn-lg" routerLink="/publico" role="button">TURNOS</a>
+<div class="turno-container p-4" style="text-align: -webkit-center;">
+  <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
+
+    <div class="jumbotron m-2">
+      <h1 class="display-4">Bienvenido a la Web de Turnos</h1>
+      <p class="lead">Bienvenido, desde aquí puede sacar un turno y evitar la sala de esperas.</p>
+      <hr class="my-4">
+      <p> Tenga en cuenta que si usted no se encuentra lo suficientemente cerca de la recepción al momento
+        de que usted sea llamado, tendrá disponible un botón con el cual usted podrá solicitar minutos
+        extra para asistir a la ventanilla.
+      </p>
+
+      <a class="btn btn-primary btn-lg" routerLink="/publico" role="button">TURNOS</a>
+    </div>
+
+  </div>
 </div>
