--- a/src/app/pages/publico/home-publico/home-publico.component.html
+++ b/src/app/pages/publico/home-publico/home-publico.component.html
@@ -1,18 +1,23 @@
-<div class="jumbotron m-2">
-    <h1 class="display-4">Bienvenido a la web publica</h1>
+<div class="turno-container p-4" style="text-align: -webkit-center;">
+    <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
 
-        <!---------------------------------------------------------------------->
-        <!-- EMAIL -->
-        <!---------------------------------------------------------------------->
-        <div class="my-2">
-            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                <mat-label>Ingrese la empresa</mat-label>
-                <input id="inputCompany" #inputCompany matInput placeholder="Empresa S.A." (keydown.enter)="findCompany(inputCompany)">
-                <span class="input-icon"><i
-                        class="mdi mdi-close"></i></span>
-            </mat-form-field>
+        <div class="jumbotron m-2">
+            <h1 class="display-4">Ingrese la empresa</h1>
+            <p class="p-2" style="background-color: whitesmoke; border-radius: .2rem;">Puede utilizar el buscador o ingresar directamente a la empresa ingresando a su web pública
+                por ejemplo:<br> <b>webturnos.herokuapp.com/laempresa</b>
+            </p>
+            <hr class="my-4">
+            <div class="my-2">
+                <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+                    <mat-label>Ingrese la empresa</mat-label>
+                    <input id="inputCompany" #inputCompany matInput placeholder="Empresa S.A."
+                        (keydown.enter)="findCompany(inputCompany)">
+                    <span class="input-icon"><i class="mdi mdi-close"></i></span>
+                </mat-form-field>
+            </div>
+            <button class="btn btn-success" (click)="findCompany(inputCompany)">Buscar</button>
+
         </div>
-        <button class="btn btn-success" (click)="findCompany(inputCompany)">Buscar</button>
-    
 
+    </div>
 </div>
