--- a/src/app/pages/publico/pantalla/pantalla.component.html
+++ b/src/app/pages/publico/pantalla/pantalla.component.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="row">
                         <div class="col xxxxl">
-                            {{ ticketsService.myTicket?.id_desk }}
+                            {{ ticketsService.myTicket?.cd_desk }}
                         </div>
                     </div>
                     <div class="row" *ngIf="!coming">
