--- a/src/app/pages/publico/turnos/turnos.component.html
+++ b/src/app/pages/publico/turnos/turnos.component.html
@@ -1,43 +1,46 @@
-<div class="bg-light turno-container  p-2">
-  <div class="card m-1">
+<div class="turno-container p-4" style="text-align: -webkit-center;">
+  <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
 
     <div class="card-header">OBTENER TURNO</div>
     <div class="card-body">
 
-
-      <h5 class="card-title">
-        <span *ngIf="loading" id="lblNuevoTicket">
-          Cargando...
-        </span>
-      </h5>
-
-
       <div *ngIf="ticketsService.companyData">
 
-        <div *ngIf="ticketsService.companyData">
+        <h5 *ngIf="loading" class="card-title">
+          <span id="lblNuevoTicket">
+            Cargando...
+          </span>
+        </h5>
+
+        <div *ngIf="!loading">
+
           <p class="lead">
             Usted esta por sacar un turno para ser atendido en
           </p>
 
-          <p style="color: red; font-size: 2rem; font-weight: 400;">
-            {{ ticketsService.companyData.tx_company_name }}
-          </p>
+          <div class="card border-success py-4 my-4">
 
-          <p style="color: red; font-size: 1rem; font-weight: 400;">
-            {{ ticketsService.companyData.tx_address_street }}
-            {{ ticketsService.companyData.tx_address_number }}
-            {{ ticketsService.companyData.cd_city }}
-
-          </p>
-
-            <button *ngFor="let skill of skills" class="btn btn-success btn-block btn-lg" (click)="nuevoTicket(skill._id, skill.cd_skill)">
-              {{skill.tx_skill}}
-            </button>
-      
+            <p class="text-company">
+              {{ ticketsService.companyData.tx_company_name }}
+            </p>
 
 
+            <p style="color: darkblue; font-size: 1rem; font-weight: 400;">
+              {{ ticketsService.companyData.tx_address_street }}
+              {{ ticketsService.companyData.tx_address_number }}
+              {{ ticketsService.companyData.cd_city }}
+            </p>
+          </div>
+        </div>
+
+        <button *ngFor="let skill of skills" class="btn btn-primary btn-block btn-lg"
+          (click)="nuevoTicket(skill._id, skill.cd_skill)">
+          {{skill.tx_skill}}
+        </button>
+
+        <button class="btn btn-danger btn-block btn-lg" (click)="salir()">Salir</button>
       </div>
-
     </div>
+
   </div>
 </div>
